cmake_minimum_required(VERSION 3.16)
project(untitled)

set(CMAKE_CXX_STANDARD 14)


#add_executable(untitled dijstra.cpp)
#add_executable(untitled Suffixautomachine2.cpp)
add_executable(untitled main.cpp)
#add_executable(untitled PAM.cpp)
#add_executable(untitled bfs.cpp)
#add_executable(untitled "(dp)xuanxianfa.cpp")
#add_executable(untitled BM.cpp)
#add_executable(untitled oulajiangmi.cpp)
#add_executable(untitled linetree+dp.cpp)
#add_executable(untitled splay.cpp)
#add_executable(untitled "splay(seq-oprate).cpp")
#add_executable(untitled "kthMinString(SAM).cpp")
#add_executable(untitled "lcs(multi).cpp")
#add_executable(untitled "klengthmaxoccur(suffixmachine).cpp")
#add_executable(untitled binchaji.cpp)
#add_executable(untitled sibianxinyouhua.cpp)
#add_executable(untitled tuopu.cpp)
#add_executable(untitled P2513.cpp)
#add_executable(untitled zidianshu.cpp)
#add_executable(untitled nonagression.cpp)
#add_executable(untitled weightweighingbitset.cpp)
#add_executable(untitled linetree.cpp)
#add_executable(untitled weightweighing.cpp)
#add_executable(untitled addtivebinarytree.cpp)
#add_executable(untitled courseselection.cpp)
#add_executable(untitled functionofuim.cpp)
#add_executable(untitled binaryconversion.cpp)
#add_executable(untitled StringDistance.cpp)
#add_executable(untitled binaryappletree.cpp)
#add_executable(untitled maximumsubtreesum.cpp)
#add_executable(untitled adancewithoutboss.cpp)
#add_executable(untitled coloring.cpp)
